Update 102.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.3 Manage shared libraries/102.3 Lesson 1.md
@@ -4,51 +4,51 @@
 |:----------------|:------------------------------------------|
 | **Версия:**     | 5.0                                       |
 | **Тема:**       | 102 Установка Linux и управление пакетами |
-| **Цель:**       | 102.3 Управление общими библиотеками      |
+| **Цель:**       | 102.3 Управление общедоступными библиотеками 
 | **Урок:**       | 1 из 1                                    |
 
 
 ## Введение
 
-В этом уроке мы обсудим *общие библиотеки*, также известные как *общие объекты*: части скомпилированного многократно используемого кода, такие как функции или классы, которые периодически используются различными программами. 
+В этом уроке мы обсудим *общедоступные библиотеки*, также известные как *общедоступные объекты*: части скомпилированного многократно используемого кода, такие как функции или классы, которые периодически используются различными программами. 
 
-Для начала мы объясним, что такое общие библиотеки, как их идентифицировать и где они находятся. Далее мы рассмотрим, как настроить места их хранения. Наконец, мы покажем, как искать общие библиотеки, от которых зависит конкретная программа.
+Для начала мы объясним, что такое общедоступные библиотеки, как их идентифицировать и где они находятся. Далее мы рассмотрим, как настроить места их хранения. Наконец, мы покажем, как искать общедоступные библиотеки, от которых зависит конкретная программа.
 
 
-## Концепция общих библиотек
+## Концепция общедоступных библиотек
 
 Подобно своим физическим аналогам, программные библиотеки представляют собой наборы кода, которые предназначены для использования множеством различных программ; так же, как в физических библиотеках хранятся книги и другие ресурсы, которыми могут пользоваться разные люди. 
 
-Чтобы создать исполняемый файл из исходного кода программы, необходимо выполнить два важных шага. Во-первых, *компилятор* превращает исходный код в машинный код, который хранится в так называемых *объектных файлах*. Во-вторых, *компоновщик* объединяет объектные файлы и связывает их с библиотеками, чтобы сгенерировать окончательный исполняемый файл. Это связывание может быть *статическим* или *динамическим*. В зависимости от того, какой метод мы выберем, мы будем говорить о статических библиотеках или, в случае динамической компоновки, об общих библиотеках. Поясним их различия. 
+Чтобы создать исполняемый файл из исходного кода программы, необходимо выполнить два важных шага. Во-первых, *компилятор* превращает исходный код в машинный код, который хранится в так называемых *объектных файлах*. Во-вторых, *компоновщик* объединяет объектные файлы и связывает их с библиотеками, чтобы сгенерировать окончательный исполняемый файл. Это связывание может быть *статическим* или *динамическим*. В зависимости от того, какой метод мы выберем, мы будем говорить о статических библиотеках или, в случае динамической компоновки, об общедоступных библиотеках. Поясним их различия. 
 
 * Статические библиотеки  
 Статическая библиотека объединяется с программой во время компоновки. Копия кода библиотеки встраивается в программу и становится ее частью. Таким образом, программа не зависит от библиотеки во время выполнения, потому что программа уже содержит код библиотеки. Отсутствие зависимостей можно рассматривать как преимущество, поскольку вам не нужно беспокоиться о том, чтобы используемые библиотеки всегда были доступны. С другой стороны, статически связанные программы тяжелее. 
 
-* Общие(или динамические) библиотеки  
-В случае общих библиотек компоновщик просто заботится о том, чтобы программа правильно ссылалась на библиотеки. Однако компоновщик не копирует код библиотеки в файл программы. Хотя во время выполнения общая библиотека должна быть доступна для удовлетворения зависимостей программы. Это экономичный подход к управлению системными ресурсами, поскольку он помогает уменьшить размер программных файлов, и в память загружается только одна копия библиотеки, даже если она используется несколькими программами.
+* общедоступные(или динамические) библиотеки  
+В случае общедоступных библиотек компоновщик просто заботится о том, чтобы программа правильно ссылалась на библиотеки. Однако компоновщик не копирует код библиотеки в файл программы. Хотя во время выполнения общедоступная библиотека должна быть доступна для удовлетворения зависимостей программы. Это экономичный подход к управлению системными ресурсами, поскольку он помогает уменьшить размер программных файлов, и в память загружается только одна копия библиотеки, даже если она используется несколькими программами.
 
 
-## Соглашения об именах файлов общих объектов
+## Соглашения об именах файлов общедоступных объектов
 
-Имя общей библиотеки, также известное как *soname*, следует шаблону, который состоит из трех элементов: 
+Имя общедоступной библиотеки, также известное как *soname*, следует шаблону, который состоит из трех элементов: 
 * Имя библиотеки (обычно с префиксом `lib`) 
-* `so` (что означает «общий объект») 
+* `so` (что означает «общедоступный объект») 
 * Номер версии библиотеки 
 
 Вот пример: `libpthread.so.0` 
 
 Имена статических библиотек, напротив, заканчиваются на `.a`, например `libpthread.a`.
 
->Поскольку файлы, содержащие общие библиотеки, должны быть доступны при выполнении программы, большинство систем Linux содержат общие библиотеки. Поскольку статические библиотеки требуются только в выделенном файле при компоновке программы, они могут отсутствовать в системе конечного пользователя.
+>Поскольку файлы, содержащие общедоступные библиотеки, должны быть доступны при выполнении программы, большинство систем Linux содержат общедоступные библиотеки. Поскольку статические библиотеки требуются только в выделенном файле при компоновке программы, они могут отсутствовать в системе конечного пользователя.
 
-`glibc` (библиотека GNU C) - хороший пример общей библиотеки. В системе Debian GNU/Linux 9.9 ее файл называется `libc.so.6`. Такие довольно общие имена файлов обычно представляют собой символические ссылки, указывающие на фактический файл, содержащий библиотеку, имя которой содержит точный номер версии. В случае `glibc` эта символическая ссылка выглядит так:
+`glibc` (библиотека GNU C) - хороший пример общедоступной библиотеки. В системе Debian GNU/Linux 9.9 ее файл называется `libc.so.6`. Такие довольно общие имена файлов обычно представляют собой символические ссылки, указывающие на фактический файл, содержащий библиотеку, имя которой содержит точный номер версии. В случае `glibc` эта символическая ссылка выглядит так:
 ```console
 $ ls -l /lib/x86_64-linux-gnu/libc.so.6
 lrwxrwxrwx 1 root root 12 feb  6 22:17 /lib/x86_64-linux-gnu/libc.so.6 -> libc-2.24.so
 ```
-Этот шаблон ссылки на файлы общей библиотеки, названный конкретной версией, с помощью более общих имен файлов, является обычной практикой. 
+Этот шаблон ссылки на файлы общедоступной библиотеки, названный конкретной версией, с помощью более общих имен файлов, является обычной практикой. 
 
-Другие примеры общих библиотек включают `libreadline` (которая позволяет пользователям редактировать командные строки по мере их ввода и включает поддержку режимов редактирования Emacs и vi), `libcrypt` (которая содержит функции, связанные с шифрованием, хешированием и кодированием) или `libcurl` ( которая представляет собой многопротокольную библиотеку передачи файлов). Общие расположения общих библиотек в системе Linux: 
+Другие примеры общедоступных библиотек включают `libreadline` (которая позволяет пользователям редактировать командные строки по мере их ввода и включает поддержку режимов редактирования Emacs и vi), `libcrypt` (которая содержит функции, связанные с шифрованием, хешированием и кодированием) или `libcurl` ( которая представляет собой многопротокольную библиотеку передачи файлов). Общие расположения общедоступных библиотек в системе Linux: 
 
 * `/lib/`
 * `lib32`
@@ -56,10 +56,10 @@ lrwxrwxrwx 1 root root 12 feb  6 22:17 /lib/x86_64-linux-gnu/libc.so.6 -> libc-2
 * `usr/lib/` 
 * `/usr/local/lib`
 
->Концепция общих библиотек не является эксклюзивной для Linux. В Windows, например, они называются DLL, что означает динамически подключаемые библиотеки.
+>Концепция общедоступных библиотек не является эксклюзивной для Linux. В Windows, например, они называются DLL, что означает динамически подключаемые библиотеки.
 
 
-## Конфигурация путей к общей библиотеке
+## Конфигурация путей к общедоступной библиотеке
 
 Ссылки, содержащиеся в динамически связанных программах, разрешаются динамическим компоновщиком (`ld.so` или `ld-linux.so`) при запуске программы. Динамический компоновщик ищет библиотеки в нескольких каталогах. Эти каталоги указаны по *пути к библиотеке*. Путь к библиотеке настраивается в каталоге `/etc`, а именно в файле `/etc/ld.so.conf` и, что более распространено в настоящее время, в файлах, находящихся в каталоге `/etc/ld.so.conf.d`. Обычно шаблон включает только одну строку `include` для файлов `*.conf` в последнем:
 ```console
@@ -71,7 +71,7 @@ include /etc/ld.so.conf.d/*.conf
 $ ls /etc/ld.so.conf.d/
 libc.conf  x86_64-linux-gnu.conf
 ```
-Эти `*.conf` файлы должны включать абсолютные пути к каталогам общих библиотек:
+Эти `*.conf` файлы должны включать абсолютные пути к каталогам общедоступных библиотек:
 ```console
 $ cat /etc/ld.so.conf.d/x86_64-linux-gnu.conf
 # Multiarch support
@@ -139,12 +139,12 @@ export LD_LIBRARY_PATH=/usr/local/mylib
 ```
 в одном из сценариев инициализации Bash, например `/etc/bash.bashrc` или `~/.bashrc`.
 
->`LD_LIBRARY_PATH` для общих библиотек то же самое, что `PATH` для исполняемых файлов. Дополнительные сведения о переменных среды и конфигурации оболочки смотри в соответствующих уроках.
+>`LD_LIBRARY_PATH` для общедоступных библиотек то же самое, что `PATH` для исполняемых файлов. Дополнительные сведения о переменных среды и конфигурации оболочки смотри в соответствующих уроках.
 
 
 ## Поиск зависимостей конкретного исполняемого файла
 
-Чтобы найти общие библиотеки, необходимые для конкретной программы, используйте команду `ldd`, за которой следует абсолютный путь к программе. Вывод показывает путь к файлу общей библиотеки, а также шестнадцатеричный адрес памяти, по которому он загружен:
+Чтобы найти общедоступные библиотеки, необходимые для конкретной программы, используйте команду `ldd`, за которой следует абсолютный путь к программе. Вывод показывает путь к файлу общедоступной библиотеки, а также шестнадцатеричный адрес памяти, по которому он загружен:
 ```console
 $ ldd /usr/bin/git
     linux-vdso.so.1 =>  (0x00007ffcbb310000)
@@ -175,7 +175,7 @@ Unused direct dependencies:
 
 ## Упражнения для закрепления
 
-1. Разделите следующие имена общих библиотек на части:
+1. Разделите следующие имена общедоступных библиотек на части:
 
 | **Полное имя файла**   | **Название библиотеки** | ***so* суффикс** | **Номер версии** |
 |:-----------------------|:------------------------|:-----------------|:-----------------|
@@ -186,11 +186,11 @@ Unused direct dependencies:
 | `libsystemd.so.0`      |                         |                  |                  |  
 | `ld-linux-x86-64.so.2` |                         |                  |                  |
 
-2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общей библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
+2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общедоступной библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
 * В какой каталог вы должны поместить этот файл? 
 * Какую команду следует запустить, чтобы изменения полностью вступили в силу?
 
-3. Какую команду вы бы использовали для вывода списка общих библиотек, необходимых для `kill`?
+3. Какую команду вы бы использовали для вывода списка общедоступных библиотек, необходимых для `kill`?
 
 
 ## Упражнения на размышление
@@ -204,14 +204,14 @@ Unused direct dependencies:
 ## Резюме
 
 Из этого урока вы узнали: 
-* Что такое общая (или динамическая) библиотека. 
-* Различия между общими и статическими библиотеками. 
-* Имена общих библиотек (*sonames*). 
-* Предпочтительное расположение общих библиотек в системе Linux, например `/lib` или `/usr/lib`. 
+* Что такое общедоступная (или динамическая) библиотека. 
+* Различия между общедоступными и статическими библиотеками. 
+* Имена общедоступных библиотек (*sonames*). 
+* Предпочтительное расположение общедоступных библиотек в системе Linux, например `/lib` или `/usr/lib`. 
 * Назначение динамического компоновщика `ld.so` (или `ld-linux.so`). 
-* Как настроить пути к общим библиотекам с помощью файлов в `/etc/`, таких как `ld.so.conf` или файлов в каталоге `ld.so.conf.d`. 
-* Как настроить пути к общей библиотеке с помощью переменной среды `LD_LIBRARY_PATH`. 
-* Как найти зависимости исполняемых файлов и общих библиотек. 
+* Как настроить пути к общедоступным библиотекам с помощью файлов в `/etc/`, таких как `ld.so.conf` или файлов в каталоге `ld.so.conf.d`. 
+* Как настроить пути к общедоступной библиотеке с помощью переменной среды `LD_LIBRARY_PATH`. 
+* Как найти зависимости исполняемых файлов и общедоступных библиотек. 
 
 Команды, используемые в этом уроке: 
 
@@ -248,7 +248,7 @@ Unused direct dependencies:
 
 ## Ответы на упражнения для закрепления
 
-1. Разделите следующие имена общих библиотек на части:
+1. Разделите следующие имена общедоступных библиотек на части:
 
 | **Полное имя файла**   | **Название библиотеки** | ***so* суффикс** | **Номер версии** |
 |:-----------------------|:------------------------|:-----------------|:-----------------|
@@ -259,13 +259,13 @@ Unused direct dependencies:
 | `libsystemd.so.0`      | `libsystemd`            | `so`             | `0`              |  
 | `ld-linux-x86-64.so.2` | `ld-linux-x86-64`       | `so`             | `2`              |
 
-2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общей библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
+2. Вы разработали часть программного обеспечения и хотите добавить в свою систему новый каталог общедоступной библиотеки (`/opt/lib/mylib`). Вы указываете его абсолютный путь в файле `mylib.conf`. 
 * В какой каталог вы должны поместить этот файл?  
 `/etc/ld.so.conf.d`
 * Какую команду следует запустить, чтобы изменения полностью вступили в силу?  
 `ldconfig`
 
-3. Какую команду вы бы использовали для вывода списка общих библиотек, необходимых для `kill`?  
+3. Какую команду вы бы использовали для вывода списка общедоступных библиотек, необходимых для `kill`?  
 `ldd /bin/kill`
 
 
