Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -470,3 +470,22 @@ libsdl2-dev: /usr/lib/x86_64-linux-gnu/libSDL2.so
 
 Разница между поиском `apt-file` и `dpkg-query` заключается в том, что поиск `apt-file` также будет искать неустановленные пакеты, в то время как `dpkg-query` может отображать только файлы, принадлежащие установленному пакету.
 
+
+## Упражнения для закрепления
+
+
+
+## Упражнения на размышление
+
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+## Ответы на упражнения для размышления
