Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -473,19 +473,103 @@ libsdl2-dev: /usr/lib/x86_64-linux-gnu/libSDL2.so
 
 ## Упражнения для закрепления
 
+1. Какая команда используется для установки пакета с именем `package.deb` с помощью `dpkg`? 
+
+2. Используя `dpkg-query`, найдите, какой пакет содержит файл с именем `7zr.1.gz`. 
+
+3. Можете ли вы удалить пакет под названием `unzip` из системы с помощью `dpkg -r unzip`, если от него зависит пакет `file-roller`? Если нет, как правильно это сделать? 
+
+4. Как с помощью `apt-file` узнать, какой пакет содержит файл `unrar`? 
+
+5. Какая команда показывает информацию о пакете `gimp` при использовании `apt-cache`?
 
 
 ## Упражнения на размышление
 
-
+1. Рассмотрите репозиторий с исходными пакетами Debian для дистрибутива `xenial`, размещенный по адресу `http://us.archive.ubuntu.com/ubuntu/`, и с пакетами для компонента `universe`. Какую строку нужно добавить в `/etc/apt/sources.list`? 
+2. При компиляции программы вы сталкиваетесь с сообщением об ошибке с жалобой на то, что файл заголовка `zzip-io.h` отсутствует в вашей системе. Как вы можете узнать, что пакет предоставляет этот файл? 
+3. Как можно игнорировать предупреждение о зависимости и удалить пакет с помощью `dpkg`, даже если в системе есть зависящие от него пакеты? 
+4. Как получить дополнительную информацию о пакете `midori` с помощью `apt`? Какую команду следует использовать перед установкой или обновлением пакетов с помощью `apt`, чтобы обеспечить актуальность индекса пакета?
 
 
 ## Резюме
 
+На этом уроке вы узнали: 
+* Как использовать `dpkg` для установки и удаления пакетов. 
+* Как вывести список установленных пакетов и их содержимого. 
+* Как перенастроить установленный пакет. 
+* Что такое `apt` и как с его помощью устанавливать, обновлять и удалять пакеты. 
+* Как использовать `apt-cache` для поиска пакетов. 
+* Как работает файл `/etc/apt/sources.list`. 
+* Как использовать `apt-file` для отображения содержимого пакета или как найти, какой пакет содержит конкретный файл. 
 
+Обсуждались следующие команды: 
+
+`dpkg -i`  
+Устанавливает один пакет или список пакетов, разделенных пробелами. 
+
+`dpkg -r`  
+Удаляет пакет или список пакетов, разделенных пробелами. 
+
+`dpkg -I`  
+Проверяет пакет, предоставляя подробную информацию об устанавливаемом им программном обеспечении и любых необходимых зависимостях. 
+
+`dpkg --get-selections`  
+Список всех пакетов, установленных `dpkg` в системе. 
+
+`dpkg -L`  
+Выводит список всех файлов, устанавливаемых конкретным пакетом. 
+
+`dpkg-query`  
+С указанным именем файла эта команда выводит пакет, который установил файл. 
+
+`dpkg-reconfigure`  
+Эта команда повторно запустит сценарий после установки пакета, чтобы администратор мог внести изменения в конфигурацию установки пакета. 
+
+`apt-get update`  
+Эта команда обновит локальный индекс пакета, чтобы он соответствовал тому, что доступно в настроенных репозиториях в каталоге `/etc/apt/`. 
+
+`apt-get install`  
+Эта команда загрузит пакет из удаленного репозитория и установит его вместе с зависимостями, также может использоваться для установки пакета Debian, который уже был загружен. 
+
+`apt-get remove`  
+Эта команда удалит указанные пакеты из системы. 
+
+`apt-cache show`  
+Как и команду `dpkg -I`, эту команду можно использовать для отображения сведений о конкретном пакете. 
+
+`apt-cache search`  
+Эта команда будет искать конкретный пакет в вашей локальной кэшированной базе данных APT. 
+
+`apt-file update`  
+Эта команда обновит кеш пакета, чтобы команда `apt-file` могла запрашивать его содержимое. 
+
+`apt-file search`  
+Эта команда будет искать, в какой пакет включен файл. Возвращается список всех пакетов, содержащих шаблон. 
+
+`apt-file list`  
+Эта команда используется для вывода списка содержимого пакета, как и команда `dpkg -L`.
 
 
 ## Ответы на упражнения для закрепления
 
+1. Какая команда используется для установки пакета с именем `package.deb` с помощью `dpkg`? 
+
+2. Используя `dpkg-query`, найдите, какой пакет содержит файл с именем `7zr.1.gz`. 
+
+3. Можете ли вы удалить пакет под названием `unzip` из системы с помощью `dpkg -r unzip`, если от него зависит пакет `file-roller`? Если нет, как правильно это сделать? 
+
+4. Как с помощью `apt-file` узнать, какой пакет содержит файл `unrar`? 
+
+5. Какая команда показывает информацию о пакете `gimp` при использовании `apt-cache`?
+
 
 ## Ответы на упражнения для размышления
+
+1. Рассмотрите репозиторий с исходными пакетами Debian для дистрибутива `xenial`, размещенный по адресу `http://us.archive.ubuntu.com/ubuntu/`, и с пакетами для компонента `universe`. Какую строку нужно добавить в `/etc/apt/sources.list`? 
+
+2. При компиляции программы вы сталкиваетесь с сообщением об ошибке с жалобой на то, что файл заголовка `zzip-io.h` отсутствует в вашей системе. Как вы можете узнать, что пакет предоставляет этот файл? 
+
+3. Как можно игнорировать предупреждение о зависимости и удалить пакет с помощью `dpkg`, даже если в системе есть зависящие от него пакеты? 
+
+4. Как получить дополнительную информацию о пакете `midori` с помощью `apt`? Какую команду следует использовать перед установкой или обновлением пакетов с помощью `apt`, чтобы обеспечить актуальность индекса пакета?
