Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -553,23 +553,54 @@ libsdl2-dev: /usr/lib/x86_64-linux-gnu/libSDL2.so
 
 ## Ответы на упражнения для закрепления
 
-1. Какая команда используется для установки пакета с именем `package.deb` с помощью `dpkg`? 
+**1. Какая команда используется для установки пакета с именем `package.deb` с помощью `dpkg`?**
+Передайте параметр `-i в dpkg`:
+```console
+# dpkg -i package.deb
+```
 
-2. Используя `dpkg-query`, найдите, какой пакет содержит файл с именем `7zr.1.gz`. 
+**2. Используя `dpkg-query`, найдите, какой пакет содержит файл с именем `7zr.1.gz`.**
+Добавьте параметр `-S` в `dpkg-query`:
+```console
+# dpkg-query -S 7zr.1.gz
+```
 
-3. Можете ли вы удалить пакет под названием `unzip` из системы с помощью `dpkg -r unzip`, если от него зависит пакет `file-roller`? Если нет, как правильно это сделать? 
+**3. Можете ли вы удалить пакет под названием `unzip` из системы с помощью `dpkg -r unzip`, если от него зависит пакет `file-roller`? Если нет, как правильно это сделать?**
+Нет. `dpkg` не разрешит зависимости и не позволит вам удалить пакет, если от него зависит другой установленный пакет. В этом примере вы можете сначала удалить `file-roller` (при условии, что от него ничего не зависит), а затем удалить `unzip` или удалить оба файла одновременно с помощью:
+```console
+# dpkg -r unzip file-roller
+```
 
-4. Как с помощью `apt-file` узнать, какой пакет содержит файл `unrar`? 
+**4. Как с помощью `apt-file` узнать, какой пакет содержит файл `unrar`?**
+Используйте параметр `search`, за которым следует путь (или имя файла):
+```console
+# apt-file search /usr/bin/unrar
+```
 
-5. Какая команда показывает информацию о пакете `gimp` при использовании `apt-cache`?
+**5. Какая команда показывает информацию о пакете `gimp` при использовании `apt-cache`?**
+Используйте параметр `show`, за которым следует имя пакета:
+```console
+# apt-cache show gimp
+```
 
 
 ## Ответы на упражнения для размышления
 
-1. Рассмотрите репозиторий с исходными пакетами Debian для дистрибутива `xenial`, размещенный по адресу `http://us.archive.ubuntu.com/ubuntu/`, и с пакетами для компонента `universe`. Какую строку нужно добавить в `/etc/apt/sources.list`? 
+**1. Рассмотрите репозиторий с исходными пакетами Debian для дистрибутива `xenial`, размещенный по адресу `http://us.archive.ubuntu.com/ubuntu/`, и с пакетами для компонента `universe`. Какую строку нужно добавить в `/etc/apt/sources.list`?**
+Пакеты с исходным кодом относятся к типу `deb-src`, поэтому строка должна быть такой:
+```console
+deb-src http://us.archive.ubuntu.com/ubuntu/ xenial universe
+```
+Эту строку также можно добавить в файл `.list` в `/etc/apt/sources.list.d/`. Название зависит от вас, но оно должно быть описательным, например `xenial_sources.list`.
 
-2. При компиляции программы вы сталкиваетесь с сообщением об ошибке с жалобой на то, что файл заголовка `zzip-io.h` отсутствует в вашей системе. Как вы можете узнать, что пакет предоставляет этот файл? 
+**2. При компиляции программы вы сталкиваетесь с сообщением об ошибке с жалобой на то, что файл заголовка `zzip-io.h` отсутствует в вашей системе. Как вы можете узнать, что пакет предоставляет этот файл?**
+Используйте `apt-file search`, чтобы найти, какой пакет содержит файл, отсутствующий в системе:
+```console
+# apt-file search zzip-io.h
+```
 
-3. Как можно игнорировать предупреждение о зависимости и удалить пакет с помощью `dpkg`, даже если в системе есть зависящие от него пакеты? 
+**3. Как можно игнорировать предупреждение о зависимости и удалить пакет с помощью `dpkg`, даже если в системе есть зависящие от него пакеты?**
+Можно использовать параметр `--force`, но этого никогда не следует делать, если вы точно не знаете, что делаете, поскольку существует большой риск того, что ваша система останется в несогласованном или «сломанном» состоянии.
 
-4. Как получить дополнительную информацию о пакете `midori` с помощью `apt`? Какую команду следует использовать перед установкой или обновлением пакетов с помощью `apt`, чтобы обеспечить актуальность индекса пакета?
+**4. Как получить дополнительную информацию о пакете `midori` с помощью `apt`? Какую команду следует использовать перед установкой или обновлением пакетов с помощью `apt`, чтобы обеспечить актуальность индекса пакета?**
+Следует использовать `apt-get update`. Это загрузит последние индексы пакетов из репозиториев, описанных в файле `/etc/apt/sources.list` или в каталоге `/etc/apt/sources.list.d/`.
