Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -16,11 +16,11 @@
 
 Вскоре усилились попытки стандартизировать способ распространения этих программных «пакетов», и родились первые менеджеры пакетов. Эти инструменты значительно упростили установку, настройку или удаление программного обеспечения из системы. 
 
-Одним из них был формат пакета Debian (`.deb`) и его пакетный инструмент (`dpkg`). Сегодня они широко используются не только в самом Debian, но и в его производных, таких как Ubuntu и производных от него. 
+Одним из них был формат пакета Debian (`.deb`) и его пакетный инструмент (`dpkg`). Сегодня они широко используются не только в самом Debian, но и в его производных, таких как Ubuntu и производных от нее. 
 
-Другой инструмент управления пакетами, популярный в системах на базе Debian, - Advanced Package Tool (apt), который может упростить многие аспекты установки, обслуживания и удаления пакетов, что значительно упрощает его. 
+Другой инструмент управления пакетами, популярный в системах на базе Debian, - *Advanced Package Tool* (`apt`), который может упростить многие аспекты установки, обслуживания и удаления пакетов, делая его намного проще. 
 
-В этом уроке мы узнаем, как использовать `dpkg` и `apt` для получения, установки, обслуживания и удаления программного обеспечения в системе Linux на основе Debian.
+В этом уроке мы узнаем, как использовать `dpkg` и `apt` для получения, установки, настройки и удаления программного обеспечения в системе Linux на основе Debian.
 
 
 ## Инструмент пакетов Debian (dpkg)
