Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -25,13 +25,13 @@
 
 ## Инструмент пакетов Debian (dpkg)
 
-Инструмент *Debian Package* (`dpkg`) - это важная утилита для установки, настройки, обслуживания и удаления пакетов программного обеспечения в системах на основе Debian. Самая простая операция - установить пакет `.deb`, что можно сделать с помощью:
+Инструмент *Debian Package* (`dpkg`) - это основная утилита для установки, настройки, обслуживания и удаления пакетов программного обеспечения в системах на основе Debian. Самая базовая операция это установка `.deb` пакета, которую можно выполнить с помощью:
 ```console
 # dkpg -i PACKAGENAME
 ```
-Где `PACKAGENAME` - это имя файла `.deb`, который вы хотите установить. 
+Где `PACKAGENAME` - это имя `.deb` файла, который вы хотите установить. 
 
-Обновление пакетов выполняется таким же образом. Перед установкой пакета `dpkg` проверит, существует ли уже  в системе предыдущая версия. В этом случае пакет будет обновлен до новой версии. В противном случае будет установлена новая копия.
+Обновление пакетов выполняется таким же образом. Перед установкой пакета, `dpkg` проверит, существует ли уже  в системе предыдущая версия. В этом случае пакет будет обновлен до новой версии. В противном случае будет установлена новая копия.
 
 
 ## Работа с зависимостями
