Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -36,9 +36,9 @@
 
 ## Работа с зависимостями
 
-Очень часто пакет может зависеть от других пакетов. Например, редактору изображений могут потребоваться библиотеки для открытия файлов JPEG, или другой служебной программе может потребоваться набор инструментов для виджетов, такой как Qt или GTK, для своего пользовательского интерфейса. 
+Очень часто пакет может зависеть от наличия в системе других пакетов. Например, редактору изображений могут потребоваться библиотеки для открытия файлов JPEG, или другой служебной программе может потребоваться набор инструментов для виджетов, таких как Qt или GTK, для своего пользовательского интерфейса. 
 
-`dpkg` проверит, установлены ли эти зависимости в вашей системе, и не сможет установить пакет, если это не так. В этом случае `dpkg` перечислит, какие пакеты отсутствуют. Однако он не может самостоятельно решать зависимости. Пользователь должен найти пакеты `.deb` с соответствующими зависимостями и установить их. 
+`dpkg` проверит, установлены ли эти зависимости в вашей системе, и не сможет установить пакет, если их нет. В этом случае `dpkg` перечислит, какие пакеты отсутствуют. Однако он *не может* самостоятельно решать зависимости. Пользователь сам должен найти `.deb` пакеты с соответствующими зависимостями и установить их. 
 
 В приведенном ниже примере пользователь пытается установить пакет видеоредактора OpenShot, но некоторые зависимости отсутствуют:
 ```console
@@ -70,7 +70,7 @@ Processing triggers for man-db (2.8.5-2) ...
 Errors were encountered while processing:
  openshot-qt
 ```
-Как показано выше, OpenShot зависит от пакетов `fonts-cantarell`, `python3-openshot`, `python3-pyqt5`, `python3-pyqt5.qtsvg`, `python3-pyqt5.qtwebkit` и `python3-zmq`. Все это необходимо установить до того, как установка OpenShot будет успешной.
+Как показано выше, OpenShot зависит от пакетов `fonts-cantarell`, `python3-openshot`, `python3-pyqt5`, `python3-pyqt5.qtsvg`, `python3-pyqt5.qtwebkit` и `python3-zmq`. Для успешной установки OpenShot необходимо сначала установить все эти пакеты. 
 
 
 ## Удаление пакетов
