--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -82,7 +82,7 @@ Errors were encountered while processing:
 Removing unrar (1:5.6.6-2) ...
 Processing triggers for man-db (2.8.5-2) ...
 ```
-Операция удаления также запускает проверку зависимостей, и пакет не может быть удален, если все остальные пакеты, зависящие от него, также не будут удалены. Если вы попытаетесь это сделать, вы получите сообщение об ошибке, подобное приведенному ниже:
+Операция удаления также запускает проверку зависимостей, и пакет небудет удален, пока все остальные пакеты, зависящие от него, также не будут удалены. Если вы попытаетесь это сделать, вы получите сообщение об ошибке, подобное приведенному ниже:
 ```console
 # dpkg -r p7zip
 dpkg: dependency problems prevent removal of p7zip:
@@ -95,7 +95,7 @@ dpkg: error processing package p7zip (--remove):
 Errors were encountered while processing:
  p7zip
 ```
-Вы можете передать несколько имен пакетов в `dpkg -r`, поэтому все они будут удалены сразу. 
+Вы можете также передать несколько имен пакетов в `dpkg -r`, что удалит все эти пакеты срасу. 
 
 Когда пакет удаляется, соответствующие файлы конфигурации остаются в системе. Если вы хотите удалить все, что связано с пакетом, используйте параметр `-P` (очистка) вместо `-r`.
 
