Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -104,7 +104,7 @@ Errors were encountered while processing:
 
 ## Получение информации о пакете
 
-Чтобы получить информацию о пакете `.deb`, такую как его версия, архитектура, поддержка, зависимости и многое другое, используйте команду `dpkg` с параметром `-I`, за которым следует имя файла пакета, который вы хотите проверить:
+Чтобы получить информацию о `.deb` пакете, такую как его версия, архитектура, разработчик, зависимости и многое другое, используйте команду `dpkg` с параметром `-I`, за которым следует указать имя файла пакета, который вы хотите проверить:
 ```console
 # dpkg -I google-chrome-stable_current_amd64.deb
  new Debian package, version 2.0.
