Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -160,11 +160,11 @@ unrar: /usr/bin/unrar-nonfree
 
 ## Перенастройка установленных пакетов
 
-Когда пакет установлен, существует этап настройки, называемый пост-установкой, на котором запускается сценарий для настройки всего необходимого для запуска программного обеспечения, такого как разрешения, размещение файлов конфигурации и т. д. Это также может вызвать у пользователя некоторые вопросы установить предпочтения относительно того, как будет работать программное обеспечение. 
+Когда пакет установлен, существует этап настройки, называемый *пост-установкой*, на котором запускается скрипт  настройки всего необходимого для запуска программного обеспечения, такого как права доступа, размещение файлов конфигурации и т. д. Он также может задать пользователю некоторые вопросы насчет установки предпочтений относительно того, как будет работать программное обеспечение. 
 
-Иногда из-за поврежденного или некорректного файла конфигурации вам может потребоваться восстановить настройки пакета до их «свежего» состояния. Или вы можете изменить ответы, которые вы дали на вопросы начальной конфигурации. Для этого запустите утилиту `dpkg-reconfigure`, после которой укажите имя пакета. 
+Иногда из-за поврежденного или некорректного файла конфигурации вам может потребоваться восстановить настройки пакета по умолчанию. Или вы можете изменить ответы на вопросы, которые вы дали в момент начальной конфигурации. Для этого запустите утилиту `dpkg-reconfigure`, после которой укажите имя пакета. 
 
-Эта программа создаст резервную копию старых файлов конфигурации, распакует новые в правильные каталоги и запустит сценарий после установки, предоставленный пакетом, как если бы пакет был установлен впервые. Попробуйте перенастроить пакет `tzdata` с помощью следующего примера:
+Эта программа создаст резервную копию старых файлов конфигурации, распакует новые в правильные каталоги и запустит скрипт *пост-установки*, предоставленный пакетом, как если бы пакет был установлен впервые. Попробуйте перенастроить пакет `tzdata` с помощью следующего примера:
 ```console
 # dpkg-reconfigure tzdata
 ```
