Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -174,9 +174,9 @@ unrar: /usr/bin/unrar-nonfree
 
 *Advanced Package Tool* (APT) - это система управления пакетами, включающая набор инструментов, которая значительно упрощает установку, обновление, удаление пакетов и управление ими. APT предоставляет такие функции, как расширенные возможности поиска и автоматическое разрешение зависимостей. 
 
-APT не заменяет `dpkg`. Вы можете думать об этом как о «внешнем интерфейсе», оптимизирующем операции и заполняющем пробелы в функциональности `dpkg`, например о разрешении зависимостей. 
+APT не заменяет `dpkg`. Вы можете представить его как о «внешний интерфейс», оптимизирующий операции и заполняющий пробелы в функциональности `dpkg`, например в разрешении зависимостей. 
 
-APT работает совместно с репозиториями программного обеспечения, которые содержат пакеты, доступные для установки. Такие репозитории могут быть локальным или удаленным сервером или (реже) даже диском CD-ROM. 
+APT работает совместно с репозиториями программного обеспечения, которые содержат пакеты, доступные для установки. Такие репозитории могут быть расположены локально или на удаленном сервере или даже на диске CD-ROM. 
 
 Дистрибутивы Linux, такие как Debian и Ubuntu, поддерживают свои собственные репозитории, а другие репозитории могут поддерживаться разработчиками или группами пользователей для предоставления программного обеспечения, недоступного в основных репозиториях дистрибутива. 
 
@@ -191,9 +191,9 @@ APT работает совместно с репозиториями прогр
 `apt-file`  
 используется для поиска файлов внутри пакетов. 
 
-Существует также более «дружелюбная» утилита, названная просто `apt`, объединяющая в одной утилите наиболее часто используемые опции `apt-get` и `apt-cache`. Многие команды для `apt` такие же, как и для `apt-get`, поэтому во многих случаях они взаимозаменяемы. Однако, поскольку `apt` не может быть установлен в системе, рекомендуется научиться использовать `apt-get` и `apt-cache`.
+Существует также более «дружелюбная» утилита, названная просто `apt`, объединяющая в одной утилите наиболее часто используемые опции `apt-get` и `apt-cache`. Многие команды для `apt` такие же, как и для `apt-get`, поэтому во многих случаях они взаимозаменяемы. Однако, поскольку `apt` может быть не установлен в системе, рекомендуется научиться использовать `apt-get` и `apt-cache`.
 
->Для `apt` и `apt-get` может потребоваться сетевое соединение, поскольку пакеты и индексы пакетов могут потребоваться для загрузки с удаленного сервера.
+>Для `apt` и `apt-get` могут требовать сетевое соединение, поскольку пакеты и индексы пакетов могут нуждаться в загрузке их с удаленного сервера.
 
 
 ## Обновление индекса пакета
